Actualización de la página web

--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
               <div class="tranding-slide-img">
                 <img src="img/Paso 1.png" alt="Tranding">
               </div>
+              <div class="descripcion">
+                Primera Descripción de la app
+              </div>
             </div>
 
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
                 <img src="img/Paso 2.png" alt="Tranding">
+              </div>
+              <div class="descripcion">
+                Segunda Descripción de la app
               </div>
             </div>
             
@@ -40,11 +46,17 @@
               <div class="tranding-slide-img">
                 <img src="img/Nivel de Conocimiento.png" alt="Tranding">
               </div>
+              <div class="descripcion">
+                Nivel de Conocimiento Actual sobre Economia
+              </div>
             </div>
 
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
                 <img src="img/Horas Dedicadas.png" alt="Tranding">
+              </div>
+              <div class="descripcion">
+                Dedicación de Horas al usar nuestra app
               </div>
             </div>
 
@@ -52,11 +64,17 @@
               <div class="tranding-slide-img">
                 <img src="img/Login y Registro.png" alt="Tranding">
               </div>
+              <div class="descripcion">
+                Pantalla para Ingresar o Registrarse
+              </div>
             </div>
 
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
                 <img src="img/Login.png" alt="Tranding">
+              </div>
+              <div class="descripcion">
+                Login
               </div>
             </div>
 
@@ -64,11 +82,17 @@
               <div class="tranding-slide-img">
                 <img src="img/Registro.png" alt="Tranding">
               </div>
+              <div class="descripcion">
+                Registro
+              </div>
             </div>
 
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
                 <img src="img/Home.png" alt="Tranding">
+              </div>
+              <div class="descripcion">
+                Pantalla Principal - Niveles
               </div>
             </div>
 
@@ -76,11 +100,17 @@
               <div class="tranding-slide-img">
                 <img src="img/Nivel.png" alt="Tranding">
               </div>
+              <div class="descripcion">
+                Información sobre el Nivel Elegido
+              </div>
             </div>
 
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
                 <img src="img/SubTemas.png" alt="Tranding">
+              </div>
+              <div class="descripcion">
+                Temarios del Nivel Elegido
               </div>
             </div>
 
@@ -88,11 +118,17 @@
               <div class="tranding-slide-img">
                 <img src="img/Aprendizaje 1.0.png" alt="Tranding">
               </div>
+              <div class="descripcion">
+                CConcepto y Explicacion fácil de entender
+              </div>
             </div>
 
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
                 <img src="img/Aprendizaje 1.1.png" alt="Tranding">
+              </div>
+              <div class="descripcion">
+                Ejemplo intuitivo
               </div>
             </div>
 
@@ -100,11 +136,17 @@
               <div class="tranding-slide-img">
                 <img src="img/Test 1.0.png" alt="Tranding">
               </div>
+              <div class="descripcion">
+                Cuestionario sobre lo aprendido
+              </div>
             </div>
 
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
                 <img src="img/Test 1.0 Correct.png" alt="Tranding">
+              </div>
+              <div class="descripcion">
+                Opción Elegida correcta
               </div>
             </div>
 
@@ -112,17 +154,26 @@
               <div class="tranding-slide-img">
                 <img src="img/Test 1.0 Incorrect.png" alt="Tranding">
               </div>
+              <div class="descripcion">
+                Opción Elegida incorrecta
+              </div>
             </div>
 
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
                 <img src="img/Tips.png" alt="Tranding">
               </div>
+              <div class="descripcion">
+                Consejos útiles diarios
+              </div>
             </div>
 
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
                 <img src="img/Organizador.png" alt="Tranding">
+              </div>
+              <div class="descripcion">
+                Organiza tu dinero
               </div>
             </div>
 
